--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <!-- Bootstrap core CSS -->
     <!-- Latest compiled and minified CSS from bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/css/bootstrapValidator.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -26,9 +27,10 @@
     <link href="assets/css/skills.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
-     <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
 
 
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
@@ -60,10 +62,10 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">Skills</a></li>
-                    <li><a href="#about">Work</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li id="home"><a href="#">Home</a></li>
+                    <li id="skills"><a href="#about">Skills</a></li>
+                    <li id="work"><a href="#about">Work</a></li>
+                    <li id="contact"><a href="#contact">Contact</a></li>
                     <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -83,98 +85,206 @@
     </nav>
 
     <!-- Begin page content -->
-  <div class="container">
+    <div class="container">
 
-    <header>
-      <div id="demo">
-        <!-- <img src="assets/images/robot-fly.jpg" alt=""> -->
-        dsgdsgdsf
+        <header id="homeDiv">
+            <div class="jumbotron">
+                <img class="header-image" src="assets/images/robot-fly.jpg" alt="">
 
-      </div>
-    </header>
+
+            </div>
+        </header>
 
         <div class="jumbotron">
 
             <div class="row">
-                <div class="col-xs-12 col-sm-3" style="background-color:red;">
-                    <img class="profile-image" src="assets/images/tolu-photo.jpg" alt="profile picture" />
-                    <p>
+                <div class="col-xs-12 col-sm-3">
+                    <img class="img-circle" src="assets/images/tolu-photo.jpg" alt="profile picture" />
+                    <!-- <p>
                         Hello
-                    </p>
+                    </p> -->
                 </div>
                 <div class="col-xs-12 col-sm-9">
-                    <p> I'm a web programmer by day and I fight super villians by night. Super powers include winsomeness and curiosity. Animation enthusiast who easily gets distracted by trying to figure out the CGI involved.</p>
+                    <p class="bio-message"> I'm a web programmer by day and I fight super villians by night. Super powers include winsomeness and curiosity. Animation enthusiast who easily gets distracted by trying to figure out the CGI involved.</p>
                 </div>
             </div>
 
         </div>
 
 
-        <div id="skills" class="jumbotron">
-          <ul class="skills-bar-container">
+        <div id="skillsDiv" class="jumbotron">
+            <ul class="skills-bar-container">
 
-              <li>
-                  <div class="progressbar-title">
-                      <h3>HTML5</h3>
-                      <span class="percent" id="html-pourcent"></span>
-                  </div>
-                  <div class="bar-container">
-                      <span class="progressbar progressred" id="progress-html"></span>
-                  </div>
-              </li>
-              <li>
-                  <div class="progressbar-title">
-                      <h3>CSS / SASS</h3>
-                      <span class="percent" id="css-pourcent"></span>
-                  </div>
-                  <div class="bar-container">
-                      <span class="progressbar progressblue" id="progress-css"></span>
-                  </div>
-              </li>
+                <li>
+                    <div class="progressbar-title">
+                        <h3>HTML5</h3>
+                        <span class="percent" id="html-pourcent"></span>
+                    </div>
+                    <div class="bar-container">
+                        <span class="progressbar progressred" id="progress-html"></span>
+                    </div>
+                </li>
+                <li>
+                    <div class="progressbar-title">
+                        <h3>CSS / SASS</h3>
+                        <span class="percent" id="css-pourcent"></span>
+                    </div>
+                    <div class="bar-container">
+                        <span class="progressbar progressblue" id="progress-css"></span>
+                    </div>
+                </li>
 
-              <li>
-                  <div class="progressbar-title">
-                      <h3>JavaScript / jQuery</h3>
-                      <span class="percent" id="javascript-pourcent"></span>
-                  </div>
-                  <div class="bar-container">
-                      <span class="progressbar progresspurple" id="progress-javascript"></span>
-                  </div>
-              </li>
+                <li>
+                    <div class="progressbar-title">
+                        <h3>JavaScript / jQuery</h3>
+                        <span class="percent" id="javascript-pourcent"></span>
+                    </div>
+                    <div class="bar-container">
+                        <span class="progressbar progresspurple" id="progress-javascript"></span>
+                    </div>
+                </li>
 
-              <li>
-                  <div class="progressbar-title">
-                      <h3>PHP</h3>
-                      <span class="percent" id="php-pourcent"></span>
-                  </div>
-                  <div class="bar-container">
-                      <span class="progressbar progressorange" id="progress-php"></span>
-                  </div>
-              </li>
+                <li>
+                    <div class="progressbar-title">
+                        <h3>PHP</h3>
+                        <span class="percent" id="php-pourcent"></span>
+                    </div>
+                    <div class="bar-container">
+                        <span class="progressbar progressorange" id="progress-php"></span>
+                    </div>
+                </li>
 
-              <li>
-                  <div class="progressbar-title">
-                      <h3>AngularJS</h3>
-                      <span class="percent" id="angular-pourcent"></span>
-                  </div>
-                  <div class="bar-container">
-                      <span class="progressbar progressgreen" id="progress-angular"></span>
-                  </div>
-              </li>
+                <li>
+                    <div class="progressbar-title">
+                        <h3>AngularJS</h3>
+                        <span class="percent" id="angular-pourcent"></span>
+                    </div>
+                    <div class="bar-container">
+                        <span class="progressbar progressgreen" id="progress-angular"></span>
+                    </div>
+                </li>
 
-          </ul>
-
-        </div>
-
-        <div id="contact" class="jumbotron">
+            </ul>
 
         </div>
 
-    </div>  <!-- End of page content -->
+        <div id="workDiv" class="jumbotron">
+
+        </div>
+        <div id="contactDiv" class="jumbotron">
+
+
+            <form class="form-horizontal" data-toggle="validator">
+
+                <div class="form-group">
+                    <label for="name" class="col-sm-3 control-label"> <span class="glyphicon glyphicon-user"></span></label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control" id="name" placeholder="Lisa Doe" required/>
+                        <div class="help-block with-errors"> name please</div>
+                    </div>
+                    <!-- col -->
+                </div>
+                <!-- form-group -->
+
+                <div class="form-group">
+                    <label for="email" class="control-label col-sm-3"><span class="glyphicon glyphicon-envelope"></label>
+                    <div class="col-sm-5">
+                        <input type="email" id="email" class="form-control" required/>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label for="phone" class="col-sm-3 control-label"> <span class="glyphicon glyphicon-phone"></span></label>
+                    <div class="col-sm-5 phoneArea">
+                        <input type="tel" id="phone1" class="form-control" placeholder="Тelephone" />
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- col -->
+                </div>
+
+
+                <div class="form-group">
+                    <label for="message" class="col-sm-3 control-label"><span class="glyphicon glyphicon-comment"></span></label>
+                    <div class="col-sm-5">
+                        <textarea class="form-control" id="message" placeholder="Message content..." required> </textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- col -->
+                </div>
+                <!-- form-group -->
+
+
+                <div class="form-group">
+                    <label for="robot-check" class="control-label col-sm-3">Robot Check : Which is not a means of payment?</label>
+                    <div class="col-sm-5">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="cash" value="cash" /> Cash
+                            </label>
+                        </div>
+                        <!-- checkbox -->
+
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="visa" value="visa" /> Visa
+                            </label>
+                        </div>
+                        <!-- checkbox -->
+
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="youtube" value="youtube" /> Uzcard
+                            </label>
+                        </div>
+                        <!-- checkbox -->
+
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="paypal" value="paypal" /> Click
+                            </label>
+                        </div>
+                        <!-- checkbox -->
+                    </div>
+                    <!-- col -->
+                </div>
+                <!-- form-group -->
+
+                <div class="col-lg-6 center-block">
+                    <button id="singlebutton" name="singlebutton" class="btn btn-primary center-block">
+                        Send Message
+                    </button>
+                </div>
+
+
+
+
+
+
+            </form>
+
+
+
+
+
+
+        </div>
+
+    </div>
+    <!-- End of page content -->
 
     <footer class="footer">
         <div class="container">
-            <p class="text-muted">Place sticky footer content here.</p>
+            <!-- <p class="text-muted">Place sticky footer content here.</p> -->
+            <div class="social-media">
+                <a href="#"><span>Facebook</span></a>
+                <a href="#"><span>Twitter</span></a>
+                <a href="#"><span>Google+</span></a>
+                <a href="#"><span>Github</span></a>
+                <a href="#"><span>Dribbble</span></a>
+                <a href="#"><span>CodePen</span></a>
+            </div>
         </div>
     </footer>
 
@@ -185,6 +295,8 @@
     <!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
     <!--build:js js/main.min.js -->
