Added social media links.

--- a/app/index.html
+++ b/app/index.html
@@ -338,9 +338,9 @@
         <div class="container">
             <!-- <p class="text-muted">Place sticky footer content here.</p> -->
             <div class="social-media">
-                <a href="#"><span class="fa-stack fa-lg"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x animated infinite jello"></i></span></a>
-                <a href="#"><span class="fa-stack fa-lg"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x animated infinite wobble"></i></span></a>
-                <a href="#"><span class="fa-stack fa-lg"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x animated infinite jello"></i></span></a>
+                <a href="https://www.facebook.com/tolujay"><span class="fa-stack fa-lg"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x animated infinite jello"></i></span></a>
+                <a href="https://twitter.com/tolujaiyeola"><span class="fa-stack fa-lg"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x animated infinite wobble"></i></span></a>
+                <a href="https://ca.linkedin.com/in/tolujaiyeola"><span class="fa-stack fa-lg"><i class="fa fa-square-o fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x animated infinite jello"></i></span></a>
                 <!-- <a href="#"><span>Twitter</span></a>
                 <a href="#"><span>Google+</span></a>
                 <a href="#"><span>Github</span></a>
