Added thumbnail images, new fonts, replaced header image and tweaks to the make the html markup look better.

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <link href='https://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
 
+    <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,700|Pompiere" rel="stylesheet">
 
     <link href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
@@ -89,13 +90,24 @@
     <!-- Begin page content -->
     <div class="container">
 
-        <header id="homeDiv">
+
+      <div class="container-fluid">
+         <div class="row">
+      	<img src="assets/images/art-boy-birds-sky-clouds.jpg" class="img-responsive">
+         </div>
+      </div>
+
+
+
+
+
+        <!-- <header id="homeDiv">
             <div class="jumbotron">
-                <img class="header-image" src="assets/images/robot-fly.jpg" alt="">
+                <img class="header-image" src="assets/images/art-boy-birds-sky-clouds.jpg" alt="">
 
 
             </div>
-        </header>
+        </header> -->
 
         <div class="jumbotron">
 
@@ -115,6 +127,7 @@
 
 
         <div id="skillsDiv" class="jumbotron">
+          <h1 class="section-header">Skills</h1>
             <ul class="skills-bar-container">
 
                 <li>
@@ -171,13 +184,13 @@
         </div>
 
         <div id="workDiv" class="jumbotron">
-
+<h1 class="section-header">Work</h1>
             <div class="container">
                 <div class="row">
                     <ul class="thumbnails no-bullet">
                         <li class="col-md-4">
                             <div class="thumbnail">
-                                <figure class="imghvr-fold-left"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/example-custom.jpg" alt="example-image">
+                                <figure class="imghvr-fold-left"><img src="assets/images/sasktel.png" alt="sasktel.com" class="img-responsive">
                                     <figcaption>
                                         <h3>Hello World</h3>
                                         <p>Life is too important to be taken seriously!</p>
@@ -188,7 +201,7 @@
                         </li>
                         <li class="col-md-4">
                             <div class="thumbnail">
-                                <figure class="imghvr-fold-down"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/example-custom.jpg" alt="example-image">
+                                <figure class="imghvr-fold-down"><img src="assets/images/weather-me-up.png" alt="weahtermeup.com" class="img-responsive">
                                     <figcaption>
                                         <h3>Hello World</h3>
                                         <p>Life is too important to be taken seriously!</p>
@@ -199,7 +212,7 @@
                         </li>
                         <li class="col-md-4">
                             <div class="thumbnail">
-                                <figure class="imghvr-fold-right"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/example-custom.jpg" alt="example-image">
+                                <figure class="imghvr-fold-right"><img src="assets/images/jobfetcher.png" alt="example-image">
                                     <figcaption>
                                         <h3>Hello World</h3>
                                         <p>Life is too important to be taken seriously!</p>
@@ -238,7 +251,7 @@
 
         <div id="contactDiv" class="jumbotron">
 
-
+            <h1 class="section-header">Contact Me</h1>
             <form class="form-horizontal">
 
                 <div class="form-group">
