Fixed header image bottom padding.

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
 
       <div class="container-fluid">
          <div class="row">
-      	<img src="assets/images/art-boy-birds-sky-clouds.jpg" class="img-responsive">
+      	<img src="assets/images/art-boy-birds-sky-clouds.jpg" class="img-responsive header-image">
          </div>
       </div>
 
