Pushed copy to production.

--- a/app/index.html
+++ b/app/index.html
@@ -165,10 +165,9 @@
                             <div class="thumbnail">
                                 <figure class="imghvr-fold-left"><img src="assets/images/sasktel.png" alt="sasktel.com" class="img-responsive">
                                     <figcaption>
-                                        <h3>Hello World</h3>
-                                        <p>Life is too important to be taken seriously!</p>
+                                        <p>I was a member of the front-end team for the redesign o sasktel.com. Mostly into designing the look, feel and front-end functionalities using IBM's  WCM, Javascript, Html and CSS/SCSS.</p>
                                     </figcaption>
-                                    <a href="javascript:;"></a>
+                                    <a href="http://www.sasktel.com/wps/wcm/connect/content/home/" target="_blank"></a>
                                 </figure>
                             </div>
                         </li>
@@ -176,10 +175,9 @@
                             <div class="thumbnail">
                                 <figure class="imghvr-fold-down"><img src="assets/images/weather-me-up.png" alt="weahtermeup.com" class="img-responsive">
                                     <figcaption>
-                                        <h3>Hello World</h3>
-                                        <p>Life is too important to be taken seriously!</p>
+                                        <p>Sololy working on this to help know what to wear daily depending on the weather. </p>
                                     </figcaption>
-                                    <a href="javascript:;"></a>
+                                    <a href="http://weathermeup.com/" target="_blank"></a>
                                 </figure>
                             </div>
                         </li>
@@ -187,10 +185,9 @@
                             <div class="thumbnail">
                                 <figure class="imghvr-fold-right"><img src="assets/images/jobfetcher.png" alt="example-image">
                                     <figcaption>
-                                        <h3>Hello World</h3>
-                                        <p>Life is too important to be taken seriously!</p>
+                                        <p>Website used for job finding.</p>
                                     </figcaption>
-                                    <a href="javascript:;"></a>
+                                    <a href="http://jobfetcher.org/ " target="_blank"></a>
                                 </figure>
                             </div>
                         </li>
